# Opencv-with-C-

./: .gitignore  CMakeLists.txt  Main.cpp  README.MD  Thread_img.cpp
